--- a/AmIReady.html
+++ b/AmIReady.html
@@ -27,48 +27,48 @@
  
 <img src="AmIReady.jpg" alt="AmIReady">	
 <br>
-  <h2>Why do you want a pet? </h2>
-    <p> It's amazing how many people fail to ask themselves this simple question before they get pets.<br>
+  <h2 align="center">Why do you want a pet? </h2>
+   <p align="center">It's amazing how many people fail to ask themselves this simple question before they get pets.<br>
 	    Adopting a pet just because it's "the thing to do" or because the kids have been pining for a puppy<br>
 	    usually ends up being a big mistake. Don't forget that pets may be with you 10, 15, even 20 years.</p> 
-  <h2>Do you have time for a pet? </h2>
-    <p> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.<br>
+   <h2 align="center">Do you have time for a pet? </h2>
+   <p align="center"> Dogs, cats, and other animal companions cannot be ignored just because you're tired or busy.<br>
 	    They require food, water, exercise, care, and companionship every day of every year.<br>
 	    Many animals in the shelter are there because their owners didn't realize how much time it took to care for them.</p>
-<h2>Can you afford a pet?  </h2>
-    <p> The costs of pet ownership can be quite high. Licenses, training classes, <br>
+ <h2 align="center">Can you afford a pet?  </h2>
+    <p align="center">The costs of pet ownership can be quite high. Licenses, training classes, <br>
 	    veterinary care, grooming, toys, food, kitty litter, and other expenses add up quickly.</p> 
 	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="AmIReady" title="" src="dog_meme.jpg" height="300" width="350" />If
 
- <h2>Are you prepared to deal with special problems that a pet can cause? </h2>
-   <p> Flea infestations, scratched-up furniture, accidents from animals that aren't yet house trained,<br>
+ <h2 align="center">Are you prepared to deal with special problems that a pet can cause? </h2>
+   <p align="center">Flea infestations, scratched-up furniture, accidents from animals that aren't yet house trained,<br>
 	    and unexpected medical emergencies are unfortunate but common aspects of pet ownership.</p> 
-<h2>Are you willing to train your animal companion?  </h2>
-   <p> Lack of training is one of the most common reasons that adopters return pets to shelters—are <br>
+ <h2 align="center">Are you willing to train your animal companion?  </h2>
+   <p align="center"> Lack of training is one of the most common reasons that adopters return pets to shelters—are <br>
 	    you willing to solve behavior problems? Basic training helps dogs and their owners communicate better, <br>
 	    strengthening the relationship overall. And taking the time to understand why your cat does what she does,<br>
 	    especially when it involves her litter box and scratching habits, will help you avoid potential problems.</p> 
- <h2>Can you have a pet where you live?  </h2>
-    <p>  Many rental communities don't allow pets, and most of the rest have restrictions. <br>
+  <h2 align="center">Can you have a pet where you live?  </h2>
+    <p align="center"> Many rental communities don't allow pets, and most of the rest have restrictions. <br>
 	    Make sure you know what they are before you bring a companion animal home.</p> 
-<h2>Is it a good time for you to adopt a pet? </h2>
-    <p> If you have kids under 6 years old, for instance, you might consider waiting a few years<br>
+ <h2 align="center">Is it a good time for you to adopt a pet? </h2>
+   <p align="center">If you have kids under 6 years old, for instance, you might consider waiting a few years<br>
 	    before you adopt a companion. Pet ownership requires children who are mature enough to be responsible.<br>
 	    If you're a student, in the military, or travel frequently as part of your work, <br>
 	    waiting until you settle down is wise.</p> 
-<h2>Are your living arrangements suitable for the animal you have in mind?  </h2>
-    <p> Animal size is not the only variable to think about here. For example, <br>
+ <h2 align="center">Are your living arrangements suitable for the animal you have in mind?  </h2>
+    <p align="center"> Animal size is not the only variable to think about here. For example, <br>
 	    some small dogs such as terriers are very active - they require a great deal of exercise to be calm, <br>
 	    and they often bark at any noise. On the other hand, some big dogs are laid back and quite content<br>
 	    to lie on a couch all day. Before adopting a pet, do some research. That way,<br>
 	    you'll ensure you choose an animal that will fit into your lifestyle and your living arrangements.</p> 
- <h2>Will you be a responsible pet owner?  </h2>
-    <p> Having your pet spayed or neutered, obeying community leash and licensing laws, <br>
+  <h2 align="center">Will you be a responsible pet owner?  </h2>
+    <p align="center"> Having your pet spayed or neutered, obeying community leash and licensing laws, <br>
 	    and keeping identification tags on your pets are all part of being a responsible owner. <br>
 	    Of course, giving your pet love, companionship, exercise, a healthy diet, and regular <br>
 	    veterinary care are other essentials.</p> 
 
-<p> Sure, it's a long list of questions. But taking a quick stroll through an animal
+<p align="center">Sure, it's a long list of questions. But taking a quick stroll through an animal
 	shelter will help you understand why answering them before you adopt is so important. <br>
 	Many of the Midlands homeless pets are puppies and kittens, victims of irresponsible people <br>
 	who allowed their pets to breed. But there are at least as many dogs and cats at the shelter<br>
